client/src/theme/styles/components/global/_table.scss
.table {

  &__count-container {
    @include panelRoundedLight;
    padding: 15px 22px;
    margin-bottom: 8px;
  }

  &__heading-small {
    @include formLabelPrimary;
  }

  &__row {
    padding: 15px 22px 16px;
    margin: 0;
    border-bottom: 1px solid $neutral45;
    transition: background-color $duration $timing;
    position: relative;

    &--body {
      &:hover {
        background-color:$neutral05;

        .table__hover-arrow {
          opacity: 1;
        }
      }
    }
  }

  &__list {
    display: grid;

    @include respond($break85) {
      @include screenReaderText
    }
  }

  &__list-item-container {
    padding-bottom:  15px;
  }

  &__list-value {
    margin-inline-start: 0;
  }

  &__table {
    display: none;

    @include respond($break85) {
      display: table;
      width: 100%;
    }
  }

  &__table-count-heading {
    color: $neutral75;
    font-size: 13px;
    margin: 0;
  }

  &__count-figure {
    color: $neutral90;
  }

  &__table-heading {
    color: $neutral70;
  }

  &__label-icon {
    margin-right: 8px;
    align-self: center;
  }

  &__hover-arrow {
    opacity: 0;
    margin-left: 20px;
    transition: opacity $duration $timing;
  }

  &__nested-link-arrow {
    opacity: 0;
    right: 12px;
    position: absolute;
    top: 9px;
    transition: opacity $duration $timing;
  }

  &__private-icon {
    color: $neutral70;
    margin-left: 10px;
    margin-bottom: 5px;
  }

  &__nested-link {
    text-decoration: none;
    position: relative;
    border-radius: 15px;
    padding: 4px 32px 5px 17px;
    margin-left: -17px;
    transition: background-color $duration $timing;

    @include respond($break85) {
      margin-left: 17px;
    }

    &:hover {
      background-color: $neutralWhite;

      .table__nested-link-arrow {
        opacity: 1;
      }
    }
  }

  &__mobile-columns {
    display: flex;
    justify-content: space-between;

    @include respond($break40) {
      justify-content: flex-start;
    }
  }

  &__padded-cell {
    padding: 16px 22px;
  }

  &__row-link {
    position: absolute;
    display: inline-block;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
  }

  &__body-text {
    @include templateHead;
    color: $neutral90;
    position: relative;

    @include respond($break85) {
      max-width: 360px;
    }
  }

  &__value-large {
    font-weight: $medium;
    font-size: 18px;
    background-color: inherit;
    padding: 10px 0 20px;
    margin: 0;
    display: flex;
    align-items: center;

    @include respond($break85) {
      font-size: 21px;
      padding: 21px 22px;
    }
  }

  &__name-container {
    @include respond($break85) {
      max-width: calc(100% - 38px);
      height: 26px;
      display: inline-block;
      white-space: nowrap;
      overflow-x: hidden;
      text-overflow: ellipsis;
    }
  }

  &__no-left-padding {
    padding-left: 0;
  }

  &__grid-item-left {
    grid-column-start: 1;
  }

  &__grid-item-right {
    grid-column-start: 2;
  }

  &__grid-item-row-2 {
    grid-row-start: 2;
  }

  &__grid-item-row-3 {
    grid-row-start: 3;
  }

  &__grid-item-colspan {
    grid-column-end: span 2;
  }

  &__value-standard {
    @include utilityPrimary;
    font-size: 14px;
  }

  &__centered {
    padding-left: 32px;

    @include respond($break85) {
      padding-left: 0;
      text-align: center;
    }
  }

  &__right {
    text-align: right;
  }

  &__cell-small {
    width: 44px;
  }

  &__small-padding-left {
    @include respond($break85) {
      padding-left: 10px;
    }
  }

  &__right-unpadded {
    padding-right: 0;
  }

  &__column-right {
    > div:not(:last-child) {
      padding-bottom: 8px;
    }
  }

  &__column-left {
    padding-right: 100px;

    > div:not(:last-child) {
      padding-bottom: 13px;
    }
  }

  &__pagination {
    padding-top: 30px;
  }

  &__avatar-placeholder {
    color: $neutral50;
    padding-right: 8px;

    @include respond($break85) {
      padding-right: 0;
    }
  }

  &__hide-desktop {
    @include respond($break85) {
      display: none;
    }
  }

  &__hide-mobile {
    display: none;

    @include respond($break85) {
      display: inline-block;
    }
  }
}

